<resources>
    <string name="app_name">Arranchamento</string>
    <string name="exercito_brasileiro_logo">exercito brasileiro logo</string>
    <string name="logo_brigada">Logo Brigada</string>
    <string name="site_1gaaae">Site 1GAAAE</string>
    <string name="card_pio">Cardápio</string>
    <string name="arranchamento_1gaaae">Arranchamento - 1GAAAE</string>
    <string name="st_sgt">ST-SGT</string>
    <string name="oficiais">OFICIAIS</string>
</resources>
