<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="arranchamento.wos.com.br.arranchamento.MainActivity">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/logo_brigada"
        android:paddingEnd="10dp"
        android:paddingStart="15dp"
        app:srcCompat="@drawable/logobda" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/arranchamento_1gaaae"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/btn_Site1GAAAe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:onClick="btn_Site1GAAAe"
            android:layout_marginTop="20dp"
            android:text="@string/site_1gaaae" />

        <Button
            android:id="@+id/btn_OFICIAIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:onClick="btn_OFICIAIS"
            android:text="@string/oficiais" />

        <Button
            android:id="@+id/btn_ST-SGT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:onClick="btn_ST_SGT"
            android:text="@string/st_sgt" />

        <Button
            android:id="@+id/btn_Cardapio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:onClick="btn_Cardapio"
            android:text="@string/card_pio" />

    </LinearLayout>
</LinearLayout>
